<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ImportFromDeviceActivity"
        >

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.09"
            />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/selectImages_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/activity__import_from_device__select_images_btn"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            />


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recordFileName_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectImages_button"
            app:suffixText=".pdf"
            >

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recordFileName_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity__import_from_device__filename_input"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@id/recordGroups_layout"
                android:singleLine="true"
                />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recordGroups_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recordFileName_layout"
            android:layout_marginTop="84dp"
            app:layout_constraintHorizontal_bias="0.25"
            >

        <solutions.mk.mobile.components.RecordGroupsInputEditText
                android:id="@+id/recordGroups_input"
                android:hint="@string/activity__import_from_device__groups_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete"
                android:nextFocusForward="@id/recordDescription_layout"
                android:singleLine="true"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recordDescription_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recordGroups_layout"
            >

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recordDescription_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity__import_from_device__description_input"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/activity__import_from_device__submit_btn"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recordDescription_layout"
            />

</androidx.constraintlayout.widget.ConstraintLayout>